Turn KLauncher into a QGuiApplication

klauncher uses the X11 windowing system which means it should be a
QGuiApplication. This is important as otherwise all the runtime checks
for whether X11 is used will fail. This is not only inside KLauncher
itself, but also in KWindowSystem.

BUG: 336488
REVIEW: 118846